added a js file

--- a/index.html
+++ b/index.html
@@ -19,30 +19,37 @@
     </nav>
     <div class="container m-3">
       <input
-        class="form-control p-2 m-2"
+        class="form-control p-2 my-2"
+        id="costPrice"
         type="number"
         placeholder="Cost Price"
       />
+      <span id="cost_error">Error message</span>
       <input
-        class="form-control p-2 m-2"
+        class="form-control p-2 my-2"
+        id="sellingPrice"
         type="number"
         placeholder="Selling Price"
       />
-
+      <span id="selling_error">Error message</span>
       <input
         type="submit"
         value="Calculate"
-        class="btn btn-outline-primary form-control p-2 m-2"
-        onclick="calc()"
+        class="btn btn-outline-primary form-control p-2 my-2"
+        id="calcBtn"
+        onclick="Calculate()"
       />
-      <h3>Results go here</h3>
+      <h3 id="results">Results go here</h3>
+      <h3 id="percentage"></h3>
+      <h3 id="empty"></h3>
     </div>
-    <footer>&copy;Chinazaekpere Uchenna (2022)</footer>
+    <footer>&copy; Chinazaekpere Uchenna (2022)</footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+    <script src="main.js"></script>
   </body>
 </html>
