error messages added

--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
         id="costPrice"
         type="number"
         placeholder="Cost Price"
+        required
       />
-      <span id="cost_error">Error message</span>
+      <h3 id="cost_error"></h3>
       <input
         class="form-control p-2 my-2"
         id="sellingPrice"
         type="number"
         placeholder="Selling Price"
+        required
       />
-      <span id="selling_error">Error message</span>
+      <h3 id="selling_error"></h3>
       <input
         type="submit"
         value="Calculate"
